--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+
 <!DOCTYPE html>
-<html lang="ja">
+<html>
+<head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>プライバシーポリシー</title>
 <meta charset="utf-8">
@@ -8,12 +10,78 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="">
 <link rel="shortcut icon" href="">
-    </head>
-  
-  <body>
-  <h1>
-  プライバシーポリシー
- </h1>
-    </body>
+<style type="text/css">
+#container {
+    font-family: "ＭＳ ゴシック",sans-serif;
+    padding: 8px;
+}
+</style>
+</head>
+<body>
+    <div id="container">
+        <h1>プライバシーポリシー</h1>
+        株式会社Never（以下「当社」）は，サウナダイスキ（以下「本サービス」）におけるプライバシー情報の取扱いについて，以下のとおりプライバシーポリシー（以下「本ポリシー」）を定めます。
+        <h2>第1条 プライバシーポリシー</h2>
+        <ol type="1">
+        <li>プライバシー情報のうち「個人情報」とは，個人情報保護法にいう「個人情報」を指すものとし，生存する個人に関する情報であって，当該情報に含まれる氏名，生年月日，住所，電話番号，連絡先その他の記述等により特定の個人を識別できる情報を指します</li>
+        <li>プライバシー情報のうち「履歴情報および特性情報」とは，上記に定める「個人情報」以外のものをいい，ご利用いただいたサービスやご覧になったページや広告の履歴，利用者が検索された検索キーワード，ご利用日時，ご利用の方法，ご利用環境，性別，職業，年齢，利用者のIPアドレス，クッキー情報，位置情報，端末の個体識別情報などを指します。</li>
+        </ol>
+        <h2>第2条 個人情報を収集・利用する目的</h2>
+        当社が個人情報を収集・利用する目的は，以下のとおりです。
+        <ol type="1">
+        <li>利用者に対する本サービスの提供及び開発のため</li>
+        <li>利用者に対する本サービスの利便性向上のため</li>
+        <li>利用者に対する本サービス内でのお知らせやキャンペーン情報等を通知するため</li>
+        <li>利用者からのお問い合わせに対応するため、お問い合わせ内容など当社が利用者に対してサービスを提供するにあたって必要となる情報やサービス利用状況、連絡先情報などを利用するため</li>
+        <li>上記の利用目的に付随する目的</li>
+        </ol>
+        <h2>第3条 個人情報の第三者提供</h2>
+        当社は，次に掲げる場合を除いて，あらかじめ利用者の同意を得ることなく，第三者に個人情報を提供することはありません。但し，個人情報保護法その他の法令で認められる場合を除きます。
+        <ol type="1">
+            <li>法令に基づく場合</li>
+            <li>人の生命，身体または財産の保護のために必要がある場合であって，本人の同意を得ることが困難であるとき</li>
+            <li>公衆衛生の向上または児童の健全な育成の推進のために特に必要がある場合であって，本人の同意を得ることが困難であるとき</li>
+            <li>国の機関もしくは地方公共団体またはその委託を受けた者が法令の定める事務を遂行することに対して協力する必要がある場合であって，本人の同意を得ることにより当該事務の遂行に支障を及ぼすおそれがあるとき</li>
+            <li>予め次の事項を告知あるいは公表をしている場合</li>
+            <ol type="i">
+                <li>利用目的に第三者への提供を含むこと</li>
+                <li>第三者に提供されるデータの項目</li>
+                <li>第三者への提供の手段または方法</li>
+                <li>本人の求めに応じて個人情報の第三者への提供を停止すること</li>
+            </ol>
+        </ol>
+        前項の定めにかかわらず，次に掲げる場合は第三者には該当しないものとします。
+        <ol type="1">
+            <li>当社が利用目的の達成に必要な範囲内において個人情報の取扱いの全部または一部を委託する場合</li>
+            <li>合併その他の事由による事業の承継に伴って個人情報が提供される場合</li>
+            <li>人情報を特定の者との間で共同して利用する場合であって，その旨並びに共同して利用される個人情報の項目，共同して利用する者の範囲，利用する者の利用目的および当該個人情報の管理について責任を有する者の氏名または名称について，あらかじめ本人に通知し，または本人が容易に知り得る状態に置いているとき</li>
+        </ol>
+        <h2>第4条 個人情報の開示</h2>
+        <ol type="1">
+            <li>当社は，本人から個人情報の開示を求められたときは，本人に対し，遅滞なくこれを開示します。ただし，開示することにより次のいずれかに該当する場合は，その全部または一部を開示しないこともあり，
+                開示しない決定をした場合には，その旨を遅滞なく通知します。なお，個人情報の開示に際しては，１件あたり１，０００円の手数料を申し受けます。</li>
+            <ol type="i">
+                <li>本人または第三者の生命，身体，財産その他の権利利益を害するおそれがある場合</li>
+                <li>当社の業務の適正な実施に著しい支障を及ぼすおそれがある場合</li>
+                <li>その他法令に違反することとなる場合</li>
+            </ol>   
+            <li>前項の定めにかかわらず，履歴情報および特性情報などの個人情報以外の情報については，原則として開示いたしません。</li>
+        </ol>
+        <h2>第5条 個人情報の訂正および削除</h2>
+        <ol type="1">   
+            <li>利用者は，当社の保有する自己の個人情報が誤った情報である場合には，当社が定める手続きにより，当社に対して個人情報の訂正または削除を請求することができます。</li>
+            <li>当社は，利用者から前項の請求を受けてその請求に応じる必要があると判断した場合には，遅滞なく，当該個人情報の訂正または削除を行い，これを利用者に通知します。</li>
+        </ol>
+        <h2>第6条 プライバシーポリシーの変更</h2>
+        本ポリシーの内容は，利用者に通知することなく，変更することができるものとします。
+        <h2>第7条 お問い合わせ</h2>
+        本ポリシーに関するお問い合わせは、以下にお願い致します。<br>
+        <a href="https://forms.gle/MhsBPRx1MrFenahC9">お問い合わせ</a>
+        <br><br>
+        以上
+    </div>
+    <div style="margin-top: 8px; padding-bottom: 10px;">  
+        最終更新日: 2021年4月1日（木）
+    </div>
+</body>
 </html>
-
